Updated code Mon Aug 21 2023

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <title>MIHEALTH</title>
+        <link rel="stylesheet" href="./main.css">
     </head>
     <body>
-        
+        <nav class="main-nav">
+            <span class="main-nav-front">
+                <span class="logo">
+                    <span class="logo-color-primary logo-piece">MI</span><span class="logo-color-secondary logo-piece">HEALTH</span>
+                </span>
+            </span>
+            <span>
+                <ul class="main-nav-end">
+                    <li>Breakfeast</li>
+                    <li>Lunch</li>
+                    <li>Dinner</li>
+                    <li>Dessert</li>
+                </ul>
+            </span>
+            <!--span>Breakfeast</span>
+            <span>Lunch</span>
+            <span>Dinner</span>
+            <span>Dessert</span-->
+        </nav>
     </body>
 </html>
