changed and improved page dynamics

--- a/index.html
+++ b/index.html
@@ -22,33 +22,35 @@
         </nav>
         <main>
             <div class="main-content">
-                <div class="left-content">
-                    <h1>Be </h1>
-                    <h1>Healthy</h1>
-                    <p>Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                        gravida. Risus commodo viverra maecenas accumsan lacus vel
-                        facilisis.</p>
-                    <div>
-                        <a href="#" class="content-reference"> Browse Menu &rarr;</a>
+                <div class="meal-content">
+                    <div class="meal-intro">
+                        <h1>Be </h1>
+                        <h1>Healthy</h1>
+                        <p>Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
+                            gravida. Risus commodo viverra maecenas accumsan lacus vel
+                            facilisis.</p>
+                        <div>
+                            <a href="#" class="content-reference">Browse Menu &rarr;</a>
+                        </div>
                     </div>
-                </div>
-                <div class="right-content">
-                    <div class="meal">
-                        <img src="images/apple-breakfast-quinoa-7.jpg">
-                        <div class="tag-bottom"><span>BREAKFAST</span></div>
-                        <div class="tag-top"><span>FRESH</span></div>
-                    </div>
-                    <div class="meal">
-                        <img src="images/pasta-salad-recipe-for-lunch.jpg">
-                        <div class="tag-bottom"><span>LUNCH</span></div>
-                        <div class="tag-top"><span>SWEET</span></div>
-                    </div>
-                    <div class="meal">
-                        <img src="images/shrimp-dinner.jpg">
-                        <div class="tag-bottom"><span>DINNER</span></div>
-                        <div class="tag-top"><span>DELICIOUS</span></div>
+                    <div class="meals">
+                        <div class="meal">
+                            <img src="images/apple-breakfast-quinoa-7.jpg">
+                            <div class="tag-bottom"><span>BREAKFAST</span></div>
+                            <div class="tag-top"><span>FRESH</span></div>
+                        </div>
+                        <div class="meal">
+                            <img src="images/pasta-salad-recipe-for-lunch.jpg">
+                            <div class="tag-bottom"><span>LUNCH</span></div>
+                            <div class="tag-top"><span>SWEET</span></div>
+                        </div>
+                        <div class="meal">
+                            <img src="images/shrimp-dinner.jpg">
+                            <div class="tag-bottom"><span>DINNER</span></div>
+                            <div class="tag-top"><span>DELICIOUS</span></div>
+                        </div>
                     </div>
                 </div>
             </div>
